FIX: file download without password-bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FilePage</title>
   </head>
   <body>
     <% if (locals.filelink != null) { %>
@@ -31,6 +31,7 @@
       <input type="password" , name="password" , id="password" />
       <button
         style="
+          transition: background-color 0.3s ease;
           grid-column: span 2;
           background-color: rgb(221, 239, 239);
           border-color: aqua;
