--- a/views/password.ejs
+++ b/views/password.ejs
@@ -3,35 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheet/style.css" />
     <title>Document</title>
   </head>
   <body>
     <% if (locals.error!= null) { %>
     <div style="color: red; margin-bottom: 1rem">Incorrect Password</div>
     <% } %>
-
-    <form
-      method="post"
-      style="
-        display: grid;
-        gap: 0.5rem;
-        grid-template-columns: auto 1fr;
-        max-width: 500px;
-        margin: 0 auto;
-      "
-    >
+    <form method="post">
       <label for="password">password</label>
       <input type="password" , name="password" , id="password" required />
-      <button
-        style="
-          grid-column: span 2;
-          background-color: rgb(221, 239, 239);
-          border-color: aqua;
-        "
-        type="submit"
-      >
-        Donwnload
-      </button>
+      <button type="submit">Donwnload</button>
     </form>
   </body>
 </html>
